--- a/MG_CodeProject/MG_CodeProject.uproject
+++ b/MG_CodeProject/MG_CodeProject.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "MG_CodeProject",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
