MG_Movement Pt2

--- a/MG_CodeProject/Config/DefaultGame.ini
+++ b/MG_CodeProject/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=226F22B844E7E7316C942AA18ED0158D
+CopyrightNotice=Copyright Marett Creative Labs
+
