--- a/MG_CodeProject/Config/DefaultInput.ini
+++ b/MG_CodeProject/Config/DefaultInput.ini
@@ -42,6 +42,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Quit",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SwivelRight",Key=Gamepad_RightTriggerAxis,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="SwivelLeft",Key=Gamepad_LeftTriggerAxis,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
@@ -52,6 +54,11 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Right Track Throttle",Key=Gamepad_RightShoulder,Scale=-0.500000)
 +AxisMappings=(AxisName="Move Forward",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="Turn Right",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Gamepad_LeftY,Scale=1.000000)
++AxisMappings=(AxisName="TankTurnLeft",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="TankTurnRight",Key=Gamepad_LeftX,Scale=-1.000000)
++AxisMappings=(AxisName="Turn In Place Right",Key=Gamepad_LeftX,Scale=-1.000000)
++AxisMappings=(AxisName="Turn In Place Left",Key=Gamepad_LeftX,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
