--- a/MG_CodeProject/Config/DefaultEngine.ini
+++ b/MG_CodeProject/Config/DefaultEngine.ini
@@ -9,4 +9,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Level/BattleGround.BattleGround
 GameDefaultMap=/Game/Level/MainMenu.MainMenu
+GlobalDefaultGameMode=/Game/Blueprints/BP_MGGameMode.BP_MGGameMode_C
+
+[/Script/Engine.PhysicsSettings]
+DefaultGravityZ=-980.000000
 
